2008-08-28  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	Revert this since it broke the build.

2008-08-28  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	Patch from OpenSUSE to fix uninitialized var. Closes 
	bug #543570. (Rodrigo Moya)

====================== 2.23.5 =======================

2008-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* libgnome/gnome-sound.c (send_all): More robustification.

2008-07-22  Lennart Poettering   <lpoetter@redhat.com>

	Fixes bug #541420

	* schemas/desktop_gnome_sound.schemas.in: add two new event sounds
	settings to gconf schema files.

2008-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* libgnome/gnome-sound.c (send_all): Check for EAGAIN too (thanks
	to Morten for pointing this out).

2008-07-09  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #542296

	* libgnome/gnome-sound.c (gnome_sound_sample_load): Poll the esd
	connection to check that it's still alive. Set it to -1 if it's
	not.
	(gnome_sound_play): Make sure the connection is still alive before
	trying to play the sound file.

==================== 2.23.4 ====================

2008-06-14  Christian Persch  <chpe@gnome.org>

	* Makefile.am:
	* autogen.sh:
	* configure.in: Prepare 2.23.4.

2008-06-04  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.4

==================== 2.23.3 ====================

2008-06-04  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: Version 2.23.3. (simpler to keep the version of GNOME)

2008-06-02  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version to 2.23.0
	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	Cast away a warning.

2008-05-29  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-help.h:
	* libgnome/gnome-url.h: Only include <glib.h>. Bug #535476.

2008-05-07  William Jon McCann  <jmccann@redhat.com>

	* schemas/desktop_gnome_lockdown.schemas.in: