@@ -23,6 +23,7 @@ m4_define([glib_required_version],      [2.8.0])
 m4_define([gnome_vfs_required_version], [2.5.3])
 m4_define([libbonobo_required_version], [2.13.0])
 m4_define([gobject_required_version], [2.0.0])
+m4_define([gio_required_version],       [2.16.0])
 
 dnl libtool versioning from libgnome
 m4_define([libgnome_current], [m4_eval(100 * libgnome_minor_version + libgnome_micro_version - libgnome_interface_age)])
@@ -170,6 +171,9 @@ PKG_CHECK_MODULES(LIBGNOME, dnl
   libbonobo-2.0 >= libbonobo_required_version dnl
   gconf-2.0 >= gconf_required_version dnl
   $SOUND_MODULES])
+
+# for gnome-open
+PKG_CHECK_MODULES([GIO],[gio-2.0 >= gio_required_version])
 
 dnl
 dnl Check for gtk-doc
