@@ -79,7 +79,8 @@ gnome_open_SOURCES = \
 
 gnome_open_LDADD = \
 	libgnome-2.la	\
-	$(LIBGNOME_LIBS)
+	$(LIBGNOME_LIBS) \
+	$(GIO_LIBS)
 
 libgnometypebuiltins.h: stamp-libgnometypebuiltins.h
 	@true
