@@ -1,3 +1,10 @@
+2008-09-08  Christian Persch  <chpe@gnome.org>
+
+	* configure.in:
+	* libgnome/Makefile.am:
+	* libgnome/gnome-open.c: (main): Port gnome-open to GIO. Bug #530752,
+	patch by Jean-Yves Lefort.
+
 2008-08-28  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnome/gnome-program.c: (gnome_program_init_paramv):
